--- a/app/src/main/res/layout/race_info.xml
+++ b/app/src/main/res/layout/race_info.xml
@@ -154,6 +154,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ListView
+            android:id="@+id/prof"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Bonus" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
