update capa_dons_layout and merge

--- a/app/src/main/res/layout/carac_comp_layout.xml
+++ b/app/src/main/res/layout/carac_comp_layout.xml
@@ -106,6 +106,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal|top"
                                     android:layout_margin="@dimen/_3sdp"
+                                    android:contentDescription="STR"
                                     android:fontFamily="@string/main_font"
                                     android:text="Strength"
                                     android:textAllCaps="true"
@@ -368,6 +369,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal|top"
                                     android:layout_margin="@dimen/_3sdp"
+                                    android:contentDescription="DEX"
                                     android:fontFamily="@string/main_font"
                                     android:text="Dexterity"
                                     android:textAllCaps="true"
@@ -686,6 +688,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal|top"
                                     android:layout_margin="@dimen/_3sdp"
+                                    android:contentDescription="CON"
                                     android:fontFamily="@string/main_font"
                                     android:text="Constitution"
                                     android:textAllCaps="true"
@@ -909,6 +912,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal|top"
                                     android:layout_margin="@dimen/_3sdp"
+                                    android:contentDescription="INT"
                                     android:fontFamily="@string/main_font"
                                     android:text="Intelligence"
                                     android:textAllCaps="true"
@@ -1291,6 +1295,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal|top"
                                     android:layout_margin="@dimen/_3sdp"
+                                    android:contentDescription="WIS"
                                     android:fontFamily="@string/main_font"
                                     android:text="Wisdom"
                                     android:textAllCaps="true"
@@ -1671,6 +1676,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal|top"
                                     android:layout_margin="@dimen/_3sdp"
+                                    android:contentDescription="CHA"
                                     android:fontFamily="@string/main_font"
                                     android:text="Charisma"
                                     android:textAllCaps="true"
