--- a/app/src/main/res/layouts/fragment/layout/race_layout.xml
+++ b/app/src/main/res/layouts/fragment/layout/race_layout.xml
@@ -33,7 +33,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textViewRaceName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_5sdp"
