--- a/app/src/main/res/layouts/fragment/layout/race_class_selection_layout.xml
+++ b/app/src/main/res/layouts/fragment/layout/race_class_selection_layout.xml
@@ -51,8 +51,9 @@
                         android:id="@+id/textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@string/main_font"
                         android:text="Race :"
-                        android:textSize="24sp"
+                        android:textSize="@dimen/_30sdp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -62,7 +63,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_15sdp"
                         android:layout_marginTop="@dimen/_15sdp"
+                        android:fontFamily="@string/main_font"
                         android:text="RaceName"
+                        android:textSize="@dimen/_20sdp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -93,7 +96,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_5sdp"
                 android:padding="@dimen/_3sdp"
-                app:cardBackgroundColor="#34FFFFFF">
+                app:cardBackgroundColor="#D5969696">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -104,8 +107,9 @@
                         android:id="@+id/textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@string/main_font"
                         android:text="Class :"
-                        android:textSize="24sp"
+                        android:textSize="@dimen/_30sdp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -115,7 +119,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_15sdp"
                         android:layout_marginTop="@dimen/_15sdp"
+                        android:fontFamily="@string/main_font"
                         android:text="ClassName"
+                        android:textSize="@dimen/_20sdp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
