Update race info popup window
-New UI
-Replace listView by recyclerView
-Refont StringAdapter
-Delete Utility

--- a/app/src/main/res/layouts/layout/util_list.xml
+++ b/app/src/main/res/layouts/layout/util_list.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:foregroundGravity="center"
     android:gravity="center"
+    android:orientation="vertical"
     app:layout_anchorGravity="center">
 
     <TextView
@@ -11,7 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
+        android:foregroundGravity="center"
+        android:gravity="start"
         android:paddingBottom="10dip"
         android:textSize="@dimen/_12sdp" />
+
 </LinearLayout>
