--- a/app/src/main/res/layouts/layout/class_info.xml
+++ b/app/src/main/res/layouts/layout/class_info.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="@dimen/_260sdp"
+    android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
+    android:orientation="vertical">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/global"
@@ -54,7 +55,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/RaceimageView3" />
 
 
-            <ListView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/proficienciesChoice"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -63,7 +64,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/proficiency" />
 
-            <ListView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/Saving"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
