--- a/app/src/main/res/layouts/view/layout/character_selection_view.xml
+++ b/app/src/main/res/layouts/view/layout/character_selection_view.xml
@@ -9,7 +9,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_15sdp"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_4sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_marginBottom="@dimen/_4sdp"
         app:cardBackgroundColor="#83FFE1CF">
 
         <LinearLayout
