--- a/app/src/main/res/layouts/layout/util_list.xml
+++ b/app/src/main/res/layouts/layout/util_list.xml
@@ -7,6 +7,8 @@
     android:foregroundGravity="center"
     android:gravity="center"
     android:orientation="vertical"
+    android:paddingTop="@dimen/_2sdp"
+    android:paddingBottom="@dimen/_5sdp"
     app:layout_anchorGravity="center">
 
     <TextView
@@ -14,9 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:fontFamily="@string/main_font"
         android:foregroundGravity="center"
         android:gravity="start"
-        android:paddingBottom="10dip"
         android:textSize="@dimen/_12sdp" />
 
 </LinearLayout>
