--- a/app/src/main/res/layouts/fragment/layout/personnalite_layout.xml
+++ b/app/src/main/res/layouts/fragment/layout/personnalite_layout.xml
@@ -31,6 +31,90 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="@dimen/_15sdp"
+                android:text="name"
+                android:textSize="@dimen/_20sdp" />
+
+            <EditText
+                android:id="@+id/editText4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:paddingBottom="@dimen/_20sdp" />
+
+            <TextView
+                android:id="@+id/alignement"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="@dimen/_15sdp"
+                android:text="alignement"
+                android:textSize="@dimen/_20sdp" />
+
+            <Spinner
+                android:id="@+id/al1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill"
+                android:gravity="center"
+                android:paddingBottom="@dimen/_15sdp"
+                android:textAlignment="center"
+                android:visibility="visible" />
+
+            <Spinner
+                android:id="@+id/al2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/_15sdp"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingTop="@dimen/_30sdp"
+                android:text="character trait"
+                android:textSize="@dimen/_20sdp" />
+
+            <EditText
+                android:id="@+id/character_trait"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="start|top"
+                android:inputType="textMultiLine" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingTop="@dimen/_30sdp"
+                android:text="background"
+                android:textSize="@dimen/_20sdp" />
+
+            <EditText
+                android:id="@+id/backgound"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="start|top"
+                android:inputType="textMultiLine" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="submit"
+                android:text="submit" />
+
         </LinearLayout>
 
     </ScrollView>
