fix Next Button of characSkills

--- a/app/src/main/res/layouts/fragment/layout/charac_skills_layout.xml
+++ b/app/src/main/res/layouts/fragment/layout/charac_skills_layout.xml
@@ -365,7 +365,7 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="@dimen/_15sdp"
                                             android:layout_marginStart="@dimen/_4sdp"
-                                            android:clickable="true"
+                                            android:clickable="false"
                                             android:fontFamily="@string/main_font"
                                             android:text="Strength"
                                             android:textColor="#000000"
@@ -2142,7 +2142,6 @@
                 android:layout_height="0dp"
                 android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
                 android:drawableTint="#db3812"
-                android:onClick="onNextButtonClick"
                 android:text="Next"
                 android:textColor="#db3812"
                 android:textSize="@dimen/_8sdp"
