--- a/app/src/main/res/layouts/adapter/layout/features_list_list_layout.xml
+++ b/app/src/main/res/layouts/adapter/layout/features_list_list_layout.xml
@@ -1,39 +1,31 @@
-<merge
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/_5sdp"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:padding="@dimen/_5sdp">
+    app:cardBackgroundColor="#75FFD7BA">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardBackgroundColor="#75FFD7BA">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/_5sdp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/textViewLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@string/main_font"
+            android:text="Features :"
+            android:textColor="#642D04"
+            android:textSize="@dimen/_15sdp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewFeaturesLists"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="@dimen/_5sdp">
+            android:layout_height="match_parent" />
 
-            <TextView
-                android:id="@+id/textViewLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@string/main_font"
-                android:text="Features :"
-                android:textColor="#642D04"
-                android:textSize="@dimen/_15sdp" />
+    </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewFeaturesLists"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-</merge>
+</androidx.cardview.widget.CardView>
