Info from Characteristics Skills Fragment saved into character

--- a/app/src/main/res/layouts/fragment/layout/charac_skills_layout.xml
+++ b/app/src/main/res/layouts/fragment/layout/charac_skills_layout.xml
@@ -366,6 +366,7 @@
                                             android:layout_height="@dimen/_15sdp"
                                             android:layout_marginStart="@dimen/_4sdp"
                                             android:clickable="false"
+                                            android:contentDescription="STR"
                                             android:fontFamily="@string/main_font"
                                             android:text="Strength"
                                             android:textColor="#000000"
@@ -628,6 +629,7 @@
                                             android:layout_height="@dimen/_15sdp"
                                             android:layout_marginStart="@dimen/_4sdp"
                                             android:clickable="false"
+                                            android:contentDescription="@android:string/fingerprint_icon_content_description"
                                             android:fontFamily="@string/main_font"
                                             android:text="Constitution"
                                             android:textColor="#000000"
@@ -857,6 +859,7 @@
                                                 android:layout_height="@dimen/_15sdp"
                                                 android:layout_marginStart="@dimen/_4sdp"
                                                 android:clickable="false"
+                                                android:contentDescription="INT"
                                                 android:fontFamily="@string/main_font"
                                                 android:text="Intelligence"
                                                 android:textColor="#000000"
@@ -1237,6 +1240,7 @@
                                                 android:layout_height="@dimen/_15sdp"
                                                 android:layout_marginStart="@dimen/_4sdp"
                                                 android:clickable="false"
+                                                android:contentDescription="WIS"
                                                 android:fontFamily="@string/main_font"
                                                 android:text="Wisdom"
                                                 android:textColor="#000000"
@@ -1613,6 +1617,7 @@
                                             android:layout_height="@dimen/_15sdp"
                                             android:layout_marginStart="@dimen/_4sdp"
                                             android:clickable="false"
+                                            android:contentDescription="DEX"
                                             android:fontFamily="@string/main_font"
                                             android:text="Dexterity"
                                             android:textColor="#000000"
@@ -1935,6 +1940,7 @@
                                                 android:layout_height="@dimen/_15sdp"
                                                 android:layout_marginStart="@dimen/_4sdp"
                                                 android:clickable="false"
+                                                android:contentDescription="CHA"
                                                 android:fontFamily="@string/main_font"
                                                 android:text="Charisma"
                                                 android:textColor="#000000"
