--- a/app/src/main/res/layouts/fragment/layout/class_layout.xml
+++ b/app/src/main/res/layouts/fragment/layout/class_layout.xml
@@ -43,9 +43,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_5sdp"
+                android:fontFamily="@string/main_font"
                 android:text="Classes :"
                 android:textAlignment="center"
-                android:textSize="@dimen/_30sdp" />
+                android:textColor="#642D04"
+                android:textSize="@dimen/_30sdp"
+                android:textStyle="bold" />
 
         </FrameLayout>
 
