feature recycler view

--- a/app/src/main/res/layouts/adapter/layout/character_selection_view.xml
+++ b/app/src/main/res/layouts/adapter/layout/character_selection_view.xml
@@ -102,7 +102,7 @@
                             android:textSize="@dimen/CharacterSelectionViewTextSize" />
 
                         <TextView
-                            android:id="@+id/textViewClass"
+                            android:id="@+id/textViewRace"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@string/main_font"
