--- a/app/src/main/res/layouts/adapter/layout/util_list.xml
+++ b/app/src/main/res/layouts/adapter/layout/util_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -19,6 +20,7 @@
         android:fontFamily="@string/main_font"
         android:foregroundGravity="center"
         android:gravity="start"
-        android:textSize="@dimen/_12sdp" />
+        android:textSize="@dimen/_12sdp"
+        tools:text="SampleText" />
 
 </LinearLayout>
