--- a/app/src/main/res/layouts/adapter/layout/feature_item_layout.xml
+++ b/app/src/main/res/layouts/adapter/layout/feature_item_layout.xml
@@ -1,45 +1,28 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingTop="@dimen/_2sdp"
+    android:paddingBottom="@dimen/_5sdp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textViewFeatureName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginBottom="@dimen/_5sdp"
-        android:minHeight="@dimen/_70sdp"
-        app:cardBackgroundColor="#75FFD7BA">
+        android:layout_marginStart="@dimen/_10sdp"
+        android:fontFamily="@string/main_font"
+        android:textSize="@dimen/_12sdp"
+        tools:text="FeatureName" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5sdp"
-            android:orientation="vertical">
+    <TextView
+        android:id="@+id/textViewFeatureDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@string/main_font"
+        android:textSize="@dimen/_8sdp"
+        tools:text="FeatureDesc\nbla bla bla bla bla bla bla bla bla.bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla. bla bla bla bla bla bla." />
 
-            <CheckBox
-                android:id="@+id/checkBoxFeatureName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_15sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:fontFamily="@string/main_font"
-                android:textSize="@dimen/_12sdp"
-                tools:text="Action Surge (1 use)" />
-
-            <TextView
-                android:id="@+id/textViewFeatureDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@string/main_font"
-                android:textSize="@dimen/_10sdp"
-                tools:text="Starting at 2nd level, you can push yourself beyond your normal limits for a moment. On your turn, you can take one additional action on top of your regular action and a possible bonus action. \nOnce you use this feature, you must finish a short or long rest before you can use it again. Starting at 17th level, you can use it twice before a rest, but only once on the same turn." />
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-
-</FrameLayout>
+</LinearLayout>
